<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.lab.kotlin.view.main.MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="250dp"
        android:layout_height="257dp"
        android:background="@drawable/border"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/string_edit"
        app:layout_constraintStart_toStartOf="@+id/string_edit"
        app:layout_constraintTop_toTopOf="@+id/string_edit"></View>

    <TextView
        android:id="@+id/lab_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/enter_data"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border"/>

        <EditText
            android:id="@+id/string_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/input_text_hint"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/lab_title"
            app:layout_constraintStart_toStartOf="@+id/lab_title"
            app:layout_constraintTop_toBottomOf="@+id/lab_title" />

        <Button
            android:id="@+id/btn_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:shadowColor="@color/black"
            android:text="@string/hello_button_text"
            app:layout_constraintEnd_toEndOf="@+id/string_edit"
            app:layout_constraintStart_toStartOf="@+id/string_edit"
            app:layout_constraintTop_toBottomOf="@+id/string_edit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_hello"
        app:layout_constraintStart_toStartOf="@+id/btn_hello"
        app:layout_constraintTop_toBottomOf="@+id/btn_hello" />


</androidx.constraintlayout.widget.ConstraintLayout>